sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:13: error: value &&| is not a member of Boolean
  }} while (n!=0 &&| m!=0)
                 ^